--- a/task.webflux/task.webflux/src/main/resources/application.properties
+++ b/task.webflux/task.webflux/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.application.name=task.webflux
 server.port=8081
 spring.r2dbc.url = r2dbc:postgresql://localhost:5432/taskDatabase
 spring.r2dbc.username= securityApp
 spring.r2dbc.password= securityApp
 spring.sql.init.mode=always
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
+
+spring.application.name=task.webflux
+
