--- a/task.webflux/task.webflux/src/main/resources/application.properties
+++ b/task.webflux/task.webflux/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8081
-spring.r2dbc.url = r2dbc:postgresql://localhost:5432/taskDatabase
-spring.r2dbc.username= securityApp
-spring.r2dbc.password= securityApp
+spring.r2dbc.url = ${DATABASE_URL}
+spring.r2dbc.username= ${USERNAME}
+spring.r2dbc.password= ${PASSWORD}
 spring.sql.init.mode=always
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
-
+eureka.client.service-url.defaultZone = ${EUREKA_SERVER}
 spring.application.name=task.webflux
-
